--- a/My_CV/nbproject/project.properties
+++ b/My_CV/nbproject/project.properties
@@ -1,5 +1,7 @@
 file.reference.HTML5Application-public_html=public_html
 file.reference.HTML5Application-test=test
+file.reference.My_CV-public_html=public_html
+file.reference.My_CV-test=test
 files.encoding=UTF-8
-site.root.folder=${file.reference.HTML5Application-public_html}
-test.folder=${file.reference.HTML5Application-test}
+site.root.folder=${file.reference.My_CV-public_html}
+test.folder=${file.reference.My_CV-test}
